--- a/composer.json
+++ b/composer.json
@@ -1,7 +1,10 @@
 {
     "name": "laravel/laravel",
     "description": "The Laravel Framework.",
-    "keywords": ["framework", "laravel"],
+    "keywords": [
+        "framework",
+        "laravel"
+    ],
     "license": "MIT",
     "type": "project",
     "require": {
@@ -13,16 +16,19 @@
         "laravel/framework": "^7.0",
         "laravel/helpers": "^1.3",
         "laravel/tinker": "~2.0",
-        "olimortimer/laravelshoppingcart": "^4.0"
+        "league/flysystem": "~1.0.66",
+        "league/mime-type-detection": "^1.3",
+        "olimortimer/laravelshoppingcart": "^4.0",
+        "tcg/voyager": "^1.4"
     },
     "require-dev": {
-        "facade/ignition":"^2.0",
+        "phpspec/prophecy": "^1.11.1",
+        "facade/ignition": "^2.0",
         "filp/whoops": "^2.7",
         "fzaninotto/faker": "^1.9.1",
         "mockery/mockery": "^1.3.1",
         "phpunit/phpunit": "^8.5",
         "nunomaduro/collision": "^4.1"
-        
     },
     "autoload": {
         "classmap": [
@@ -32,9 +38,9 @@
         "psr-4": {
             "App\\": "app/"
         },
-        "files": ["app/helpers.php"]
-            
-        
+        "files": [
+            "app/helpers.php"
+        ]
     },
     "autoload-dev": {
         "psr-4": {
@@ -43,8 +49,7 @@
     },
     "extra": {
         "laravel": {
-            "dont-discover": [
-            ]
+            "dont-discover": []
         }
     },
     "scripts": {
@@ -63,5 +68,11 @@
         "preferred-install": "dist",
         "sort-packages": true,
         "optimize-autoloader": true
+    },
+    "repositories": {
+        "hooks": {
+            "type": "composer",
+            "url": "https://larapack.io"
+        }
     }
 }
